// Copyright 2023 The Fleetbench Authors
//
// Licensed under the Apache License, Version 2.0 (the "License" );
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an " AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package fleetbench.rpc;

import "fleetbench/rpc/protos/RequestMessage.proto";
import "fleetbench/rpc/protos/ResponseMessage.proto";

// FleetBenchPerf is a service for benchmarking RPC performance by sending
// and receiving fleet-representative messages.
service FleetBenchPerf {
  // Handles a message and returns a random response. May add a delay depending
  // on service configuration.
  rpc Message(fleetbench.rpc.RequestMessage)
      returns (fleetbench.rpc.ResponseMessage) {}
}
