

// Copyright 2023 The Fleetbench Authors
//
// Licensed under the Apache License, Version 2.0 (the "License" );
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an " AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// WARNING: DO NOT EDIT! This file is auto-generated.

syntax = "proto2";

package fleetbench.rpc;

import "fleetbench/rpc/protos/P0/request/Message0.proto";
import "fleetbench/rpc/protos/P0/request/Message1.proto";
import "fleetbench/rpc/protos/P0/request/Message2.proto";
import "fleetbench/rpc/protos/P0/response/Message0.proto";
import "fleetbench/rpc/protos/P0/response/Message1.proto";
import "fleetbench/rpc/protos/P0/response/Message2.proto";
import "fleetbench/rpc/protos/P1/request/Message0.proto";
import "fleetbench/rpc/protos/P1/request/Message1.proto";
import "fleetbench/rpc/protos/P1/request/Message2.proto";
import "fleetbench/rpc/protos/P1/response/Message0.proto";
import "fleetbench/rpc/protos/P1/response/Message1.proto";
import "fleetbench/rpc/protos/P1/response/Message2.proto";
import "fleetbench/rpc/protos/P2/request/Message0.proto";
import "fleetbench/rpc/protos/P2/request/Message1.proto";
import "fleetbench/rpc/protos/P2/request/Message2.proto";
import "fleetbench/rpc/protos/P2/response/Message0.proto";
import "fleetbench/rpc/protos/P2/response/Message1.proto";
import "fleetbench/rpc/protos/P2/response/Message2.proto";
import "fleetbench/rpc/protos/P3/request/Message0.proto";
import "fleetbench/rpc/protos/P3/request/Message1.proto";
import "fleetbench/rpc/protos/P3/request/Message2.proto";
import "fleetbench/rpc/protos/P3/response/Message0.proto";
import "fleetbench/rpc/protos/P3/response/Message1.proto";
import "fleetbench/rpc/protos/P3/response/Message2.proto";
import "fleetbench/rpc/protos/P4/request/Message0.proto";
import "fleetbench/rpc/protos/P4/request/Message1.proto";
import "fleetbench/rpc/protos/P4/request/Message2.proto";
import "fleetbench/rpc/protos/P4/response/Message0.proto";
import "fleetbench/rpc/protos/P4/response/Message1.proto";
import "fleetbench/rpc/protos/P4/response/Message2.proto";
import "fleetbench/rpc/protos/P5/request/Message0.proto";
import "fleetbench/rpc/protos/P5/request/Message1.proto";
import "fleetbench/rpc/protos/P5/request/Message2.proto";
import "fleetbench/rpc/protos/P5/response/Message0.proto";
import "fleetbench/rpc/protos/P5/response/Message1.proto";
import "fleetbench/rpc/protos/P5/response/Message2.proto";
import "fleetbench/rpc/protos/P6/request/Message0.proto";
import "fleetbench/rpc/protos/P6/request/Message1.proto";
import "fleetbench/rpc/protos/P6/request/Message2.proto";
import "fleetbench/rpc/protos/P6/response/Message0.proto";
import "fleetbench/rpc/protos/P6/response/Message1.proto";
import "fleetbench/rpc/protos/P6/response/Message2.proto";
import "fleetbench/rpc/protos/P7/request/Message0.proto";
import "fleetbench/rpc/protos/P7/request/Message1.proto";
import "fleetbench/rpc/protos/P7/request/Message2.proto";
import "fleetbench/rpc/protos/P7/response/Message0.proto";
import "fleetbench/rpc/protos/P7/response/Message1.proto";
import "fleetbench/rpc/protos/P7/response/Message2.proto";
import "fleetbench/rpc/protos/P8/request/Message0.proto";
import "fleetbench/rpc/protos/P8/request/Message1.proto";
import "fleetbench/rpc/protos/P8/request/Message2.proto";
import "fleetbench/rpc/protos/P8/response/Message0.proto";
import "fleetbench/rpc/protos/P8/response/Message1.proto";
import "fleetbench/rpc/protos/P8/response/Message2.proto";
import "fleetbench/rpc/protos/P9/request/Message0.proto";
import "fleetbench/rpc/protos/P9/request/Message1.proto";
import "fleetbench/rpc/protos/P9/request/Message2.proto";
import "fleetbench/rpc/protos/P9/response/Message0.proto";
import "fleetbench/rpc/protos/P9/response/Message1.proto";
import "fleetbench/rpc/protos/P9/response/Message2.proto";

message P0RequestMessage {
  oneof msg {
    fleetbench.rpc.P0.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P0.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P0.request.Message2.Message2 m_2 = 3;
  }
}

message P1RequestMessage {
  oneof msg {
    fleetbench.rpc.P1.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P1.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P1.request.Message2.Message2 m_2 = 3;
  }
}

message P2RequestMessage {
  oneof msg {
    fleetbench.rpc.P2.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P2.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P2.request.Message2.Message2 m_2 = 3;
  }
}

message P3RequestMessage {
  oneof msg {
    fleetbench.rpc.P3.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P3.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P3.request.Message2.Message2 m_2 = 3;
  }
}

message P4RequestMessage {
  oneof msg {
    fleetbench.rpc.P4.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P4.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P4.request.Message2.Message2 m_2 = 3;
  }
}

message P5RequestMessage {
  oneof msg {
    fleetbench.rpc.P5.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P5.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P5.request.Message2.Message2 m_2 = 3;
  }
}

message P6RequestMessage {
  oneof msg {
    fleetbench.rpc.P6.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P6.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P6.request.Message2.Message2 m_2 = 3;
  }
}

message P7RequestMessage {
  oneof msg {
    fleetbench.rpc.P7.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P7.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P7.request.Message2.Message2 m_2 = 3;
  }
}

message P8RequestMessage {
  oneof msg {
    fleetbench.rpc.P8.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P8.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P8.request.Message2.Message2 m_2 = 3;
  }
}

message P9RequestMessage {
  oneof msg {
    fleetbench.rpc.P9.request.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P9.request.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P9.request.Message2.Message2 m_2 = 3;
  }
}

message RequestMessage {
  oneof msg {
    P0RequestMessage p0 = 1;
    P1RequestMessage p1 = 2;
    P2RequestMessage p2 = 3;
    P3RequestMessage p3 = 4;
    P4RequestMessage p4 = 5;
    P5RequestMessage p5 = 6;
    P6RequestMessage p6 = 7;
    P7RequestMessage p7 = 8;
    P8RequestMessage p8 = 9;
    P9RequestMessage p9 = 10;
  }
}

message P0ResponseMessage {
  oneof msg {
    fleetbench.rpc.P0.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P0.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P0.response.Message2.Message2 m_2 = 3;
  }
}

message P1ResponseMessage {
  oneof msg {
    fleetbench.rpc.P1.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P1.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P1.response.Message2.Message2 m_2 = 3;
  }
}

message P2ResponseMessage {
  oneof msg {
    fleetbench.rpc.P2.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P2.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P2.response.Message2.Message2 m_2 = 3;
  }
}

message P3ResponseMessage {
  oneof msg {
    fleetbench.rpc.P3.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P3.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P3.response.Message2.Message2 m_2 = 3;
  }
}

message P4ResponseMessage {
  oneof msg {
    fleetbench.rpc.P4.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P4.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P4.response.Message2.Message2 m_2 = 3;
  }
}

message P5ResponseMessage {
  oneof msg {
    fleetbench.rpc.P5.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P5.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P5.response.Message2.Message2 m_2 = 3;
  }
}

message P6ResponseMessage {
  oneof msg {
    fleetbench.rpc.P6.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P6.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P6.response.Message2.Message2 m_2 = 3;
  }
}

message P7ResponseMessage {
  oneof msg {
    fleetbench.rpc.P7.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P7.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P7.response.Message2.Message2 m_2 = 3;
  }
}

message P8ResponseMessage {
  oneof msg {
    fleetbench.rpc.P8.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P8.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P8.response.Message2.Message2 m_2 = 3;
  }
}

message P9ResponseMessage {
  oneof msg {
    fleetbench.rpc.P9.response.Message0.Message0 m_0 = 1;
    fleetbench.rpc.P9.response.Message1.Message1 m_1 = 2;
    fleetbench.rpc.P9.response.Message2.Message2 m_2 = 3;
  }
}

message ResponseMessage {
  oneof msg {
    P0ResponseMessage p0 = 1;
    P1ResponseMessage p1 = 2;
    P2ResponseMessage p2 = 3;
    P3ResponseMessage p3 = 4;
    P4ResponseMessage p4 = 5;
    P5ResponseMessage p5 = 6;
    P6ResponseMessage p6 = 7;
    P7ResponseMessage p7 = 8;
    P8ResponseMessage p8 = 9;
    P9ResponseMessage p9 = 10;
  }
}
